--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,65 @@
 /*
 Colors to use:
-dark blue: #06365f
-light blue: #1c5380
+dark blue: 
+light blue: 
 */
 
+*{
+  box-sizing: border-box;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  /* background-image: linear-gradient(#1c5380,#06365f); */
+}
+.container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  margin-top: 5%;
+}
+.phones{
+  grid-column: 1;
+  align-items: center;
+}
+.content{
+  grid-column: 2;
+  grid-row: 1;
+}
+.frame-text{
+
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  padding: 5px 20px 0px 40px;
+  margin-right: 200px;
+}
+ul{
+  text-align: center;
+  margin-top: 3%;
+  margin-bottom: 10%;
+}
+ul li{
+  list-style-type: none;
+  display: inline;  
+  margin-right: 5px;
+}
+.button{
+  width:30%;
+  display: inline;
+  
+
+}
+.iphone{
+  margin: 40px;
+}
+
+.phone-div{
+  text-align: right; 
+  padding-right: 10%;
+}
+.home {
+  display: inline;
+  text-align:right;
+  margin-left: 25%;  
+  
 }
