--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,76 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+h1 {
+  margin-top: 0%;
+  color: #01244D;
+}
+
+.top {
+  background-color: #547B9E;
+  position: relative;
+  height: 300px;
+  width: 100%;
+  z-index: -1;
+}
+
+.main {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  margin: 100px 200px 0 200px;
+  top: -300px;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0 0 100px;
+}
+
+.up {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.up div {
+  display: flex;
+  justify-content: center;
+  padding: 22px 0;
+}
+
+.down {
+  background-color: white;
+  padding: 20px;
+  border-radius: 1%;
+}
+
+.badge {
+  display: flex;
+}
+
+.badge img {
+  padding-right: 20px;
+}
+
+footer {
+  text-align: center;
+  width: 800px;
+  margin: 50px 200px;
+  position: relative;
+  top: -300px;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
 }
