--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -26,7 +26,8 @@ h2 {
 }
 
 .link-btn {
-background-color:#658AAB;
+background-color: #658AAB;
+background-image: linear-gradient(#658AAB, #316ca0e1);
 border: 2px solid #02195733;
 color:#E3E9EF;
 font-size: 1.4em;
@@ -38,7 +39,6 @@ border-radius: 4px;
 float:right;
 margin-top: 120px;
 margin-right: 400px;
-box-shadow:-2px -2px 2px #06365f, 2px 2px #06365f;;
 }
 
 .instagram {
