--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,105 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1 {
+  font-size: 30px;
+}
+
+header {
+  width: 100vw;
+  height: 33vh;
+
+  background-image: linear-gradient(to bottom, #1c5380, #06365f);
+
+}
+
+.phones {
+  position: absolute;
+  top: 100px;
+  left: 20%;
+
+  /* height: 512px; */
+  height: 570px;
+}
+
+.content {
+  position: absolute;
+  top: 100px;
+  left: 40%;
+
+  width: 30%;
+  height: 512px;
+  color: #06365f;
+  padding: 0;
+  /* background-color: red; */
+}
+
+.content-header {
+  /* background-color: green; */
+}
+
+.brand {
+  width: 314px;
+  margin-top: 10px;
+}
+
+.home {
+  float: right;
+  width: 75px;
+  padding: 10px;
+  background-image: linear-gradient(to bottom, #1c5380, #06365f);
+  color: white;
+  margin-top: 15px;
+  margin-right: 10px;
+  box-shadow: 2px 2px 10px 0 #06365f;
+  border: 2px solid #1c5380;
+  border-radius: 3px;
+}
+
+.content-main {
+  width: 80%;
+  padding: 20px 10% 20px 10%;
+  background-image: url("../images/frame.png");
+  background-position: 0 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  /* background-color: yellow; */
+}
+
+.content-main p{
+  color: black;
+}
+
+.stores {
+  padding-left: 10%;
+}
+
+footer {
+  position: absolute;
+  bottom: 100px;
+  left: 500px;
+
+  width: 50%;
+}
+
+footer ul {
+  display: inline-block;
+}
+
+footer li {
+  display: inline-block;
+  text-transform: uppercase;
+}
+
+footer a {
+  text-decoration: none;
+  padding-left: 10px;
+  width: 100%;
+  font-weight: bold;
+}
+
+.copy {
+  padding-left: 30px;
+}
