--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -27,8 +27,8 @@ body {
   background: linear-gradient(to bottom, rgb(89, 141, 201) 0%, #50779a 100%);
   left:910px;
   top: 90px;
-  border: #385779 1px solid;
-  border-radius: 4px;
+  border: #385779 .5px solid;
+  border-radius: 3px;
   color: aliceblue;
   text-align: center
 
@@ -109,4 +109,8 @@ ul{
 }
 .divImagen{
   margin-top: 20px;
+}
+#if{
+  color: rgb(211, 211, 211);
+  padding-left: 20px;
 }
