--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -38,7 +38,7 @@ width: 120px;
 border-radius: 4px;
 float:right;
 margin-top: 120px;
-margin-right: 400px;
+margin-right: 750px;
 }
 
 .instagram {
@@ -73,6 +73,7 @@ footer {
 
 header {
   background-color: #4E7699;
+  background-image: linear-gradient(#658AAB, #316ca0e1);
   height: 300px;
 }
 
