--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,68 @@
 /*
 Colors to use:
 dark blue: #06365f
-light blue: #1c5380
+light blue: 
 */
 
 body {
+    
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0px;
+}
+#all{
+  position: absolute;
+  width: 100%;
+ }
+h1 {
+  color: #06365f;
+ }
+
+#blue-back {
+  background-color: #1c5380;
+  background-size: cover; 
+  box-sizing: border-box;
+  position:absolute;
+  width: 100vw;
+  height: 40vh;
+  }
+
+.texto{
+  position: absolute; 
+  background-image: url("../images/frame.png");
+   width: 300px;
+  height: 80px; 
+  background-size: cover;
+  margin: 40px 600px;
+  padding: 80px 300px;
+ }
+
+.brand {
+margin: 50px 600px;
+padding: 30px;
+
+}
+
+.phones{
+margin: 0px 50px;
+float: left; 
+
+}
+
+.app-1{
+  position: absolute;
+padding: 20px;
+}
+.app-2{
+  
+  float: right;
+  
+}
+
+footer{
+  position: absolute;
+  text-align: center;
+  margin: 700px;
+  padding: 200px;
+
+  
 }
