--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,47 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+
+
+.bold {
+  font-weight: bold;
+}
+
+#everything2 {
+  position: relative;
+  left:150px;
+  top:70px;
+
+}
+
+#phones {
+  float: left;
+  margin-right: 15px;
+
+}
+
+#title {
+  color:#06365f;
+  font-weight: bold;
+  font-size: 20px;
+}
+#half {
+background-color:#1c5380;
+width: 100%
+
+}
+
+#principal {
+  border: 1px whitesmoke;
+  background-color: white;
+  width: 70%;
+  height: 300px;
+}
+
+#bottom {
+  position: absolute;
+  left: 420px;
+  bottom: 80px;
 }
