--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -13,7 +13,7 @@ light blue: #1c5380
     position: absolute;
     top: 12.5vh;
     right: 10vw;
-    border: 1px solid black
+    /*border: 1px solid black*/
   
   }
   
@@ -47,7 +47,7 @@ light blue: #1c5380
     left: 0vw;
     top: 6.5vw;
     position: relative;
-    border: 1px solid green;
+    /*border: 1px solid green;*/
     height: 55vh;
     width: 30vw;
   }
@@ -80,7 +80,7 @@ light blue: #1c5380
     position: absolute;
     top: 12.5vh;
     left: 10vw;
-    border: 1px solid grey
+    /*border: 1px solid grey*/
   }
 
   #telefono {
