--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,120 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header {
+  background-color: #1c5380;
+  height: 45vh;
+}
+
+.content-container {
+  display: flex;
+  z-index: 3000;
+  position: absolute;
+  width: 80vw;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 125px;
+  bottom: 0;
+  margin: auto;
+  padding: 10px;
+  margin-bottom: -30px;
+}
+
+.content-container h3 {
+  color: #06365f;
+  font-size: 25px;
+  line-height: 1.2;
+}
+
+.landing-container {
+  margin-left: 30px;
+}
+
+.phoneframe img {
+  width: 30%;
+  height: auto;
+}
+
+.brand-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.brand-container img {
+  width: auto;
+  height: auto;
+  padding: 0;
+}
+
+.home-icon {
+  padding: 0px !important;
+}
+
+.login-button {
+  background-color: #06365f;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 80px;
+  padding: 16px;
+  height: 10px;
+  border-radius: 3px;
+}
+.login-button:hover {
+  background-color: #d52975;
+}
+
+.login-button p {
+  color: white;
+  font-weight: 500;
+}
+
+.content-section {
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 3px 8px 16px #888888;
+  text-align: left;
+  background-color: white;
+}
+
+.content-section:hover {
+  box-shadow: 5px 10px 18px #888888;
+}
+
+.download-button-container {
+  display: flex;
+  margin-top: 20px;
+}
+
+.download-button-container :first-child {
+  margin-right: 20px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  margin-top: 50px;
+}
+
+footer ul {
+  display: flex;
+  width: 100%;
+  padding: 0;
+  justify-content: center;
+  list-style-type: none;
+  align-items: center;
+}
+
+[href] {
+  margin-right: 10px;
+  text-decoration: none;
+  color: #06365f;
+}
+[href]:hover {
+  color: #d52975;
+}
