--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,69 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x; 
+}
+
+.main-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 6rem;
+}
+
+.right-wrapper .top-menu {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.right-wrapper .home-wrapper {
+  display: flex;
+  align-items: center;
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+}
+
+.right-wrapper .content {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  padding: 4rem;
+  color: #06365f;
+}
+
+.right-wrapper .content p {
+  margin: 10px;
+}
+
+.stores { 
+  margin-top: 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  margin: 2rem 10%;
+  font-weight: bold;
+}
+
+.footer .nav-footer a {
+  margin-left: 5px;
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 200;
+}
+
+.footer .copyRight {
+  margin: 0 0 0 20px;
 }
